@@ -1,2 +1,10 @@
 # S.P.A.C.C.A.
-Progetto Programmazione Internet 
+AVVERTENZA
+L’applicazione è stata sviluppata avendo come riferimento macchine con sistema
+operativo Windows, perciò potrebbe dare problemi nel caricamento delle immagini
+su sistemi Linux o Mac.
+Vengono di seguito illustrate le istruzioni per avviare l’applicazione.
+Avvio
+Eseguire il file jar nel prompt dei comandi. Per avviarlo è necessario il comando:
+“java --module-path "./librerie/lib" --add-modules
+javafx.controls,javafx.fxml,javafx.base,javafx.graphics -jar Spacca.jar” .
